--- a/WekaAttriGenTreinamento/.classpath
+++ b/WekaAttriGenTreinamento/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/WekaAttriGen"/>
 	<classpathentry kind="lib" path="lib/weka.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/WekaAttributeGenerator"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
